force-app/main/default/objects/rh2__PS_Settings__c/fields/rh2__Limit_Pre_Processing__c.field-meta.xml
<CustomField>
    <fullName>rh2__Limit_Pre_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Leave this unchecked if you only want rollups / records to be processed where a change was actually made to the source field.  Removes non-essential processing such as filtering out fields that don&apos;t need to be updated (Can help w/ Timeout issues).</inlineHelpText>
    <label>Limit Pre Processing</label>
    <type>Checkbox</type>
</CustomField>