force-app/main/default/objects/rh2__PS_Settings__c/fields/rh2__Rollup_Group__c.field-meta.xml
<CustomField>
    <fullName>rh2__Rollup_Group__c</fullName>
    <label>Rollup Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>